--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,26 @@
 # --------------------------------------------------
 # Site settings
 
-title: Transform yourself
-description: TODO
+title: dbt learn
+description: dbt learn is a three day in-person training program designed to empower analysts.
 owner: http://github.com/fishtown-analytics
 repo: learn.getdbt.com
-branch: learn
+branch: master
 robots: true
 
 # --------------------------------------------------
 # Site imagery
 
 favicon: /favicon.ico
-avatar: www.getdbt.com/ui/img/graph/avatar.png
-poster: www.getdbt.com/ui/img/graph/poster.png
+avatar: ui/img/graph/avatar.png
+poster: ui/img/graph/poster.png
 
 # --------------------------------------------------
 # the subpath of your site, e.g. /blog
 
 url: "http://learn.getdbt.com"
-baseurl: "/dbt"
-stylesurl: "/dbt/www.getdbt.com"
+baseurl: "/"
+stylesurl: "/www.getdbt.com"
 
 # css container
 namespace: dbt
