messed up the title attr

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --------------------------------------------------
 # Site settings
 
-title: dbt learn
+title: Transform yourself
 description: dbt learn is a three day in-person training program designed to empower analysts.
 owner: http://github.com/fishtown-analytics
 repo: learn.getdbt.com
