--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --------------------------------------------------
 # Site settings
 
-title: Transform yourself
+title: Beyond analytics
 description: TODO
 owner: http://github.com/fishtown-analytics
 repo: learn.getdbt.com
