Create lessons collection

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,10 @@ collections:
   content:
     output: true
     permalink: /:path/
+  lessons:
+    output: true
+    sort_by: lesson
+    permalink: /:collection/:path
 
 defaults:
 -
