new dir for cona

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,10 @@ collections:
     output: true
     sort_by: lesson
     permalink: /:collection/:path
+  cona:
+    output: true
+    sort_by: lesson
+    permalink: /:collection/:path
 
 defaults:
 -
