Update Jinja lesson(s) for Remote learn

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -20,7 +20,8 @@
     - name: Morning
       lessons:
         - slug: polish-project
-        - slug: jinja
+        - slug: intro-to-jinja
+        - slug: dbtonic-jinja
         - slug: packages
         - slug: intro-data-warehouses
     - name: Afternoon
