Make the end-to-end case study an interactive project

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -29,5 +29,5 @@
         - slug: data-warehouse-performance
         - slug: big-data-tech
         - slug: materializations-incremental
-        - slug: slack-case-study
+        - slug: group-case-study
         - slug: techniques-trade
