--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -4,6 +4,7 @@
     - name: Morning
       lessons:
         - slug: who-is-analytics-engineer
+        - slug: distributed-norms
         - slug: dbt-fundamentals
     - name: Afternoon
       lessons:
@@ -28,3 +29,4 @@
         - slug: data-warehouses
         - slug: group-case-study
         - slug: techniques-trade
+\
