parent ed4774d855784471071e417c2678a185ffde0a6f author coapacetic <kyle.d.coapman@gmail.com> 1595946108 -0400 committer coapacetic <kyle.d.coapman@gmail.com> 1601588377 -0400
add the learn setup script

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ etc/learn_setup/credentials.json
 etc/learn_setup/token.pickle
 /etc/learn_mailmerge/html
 /etc/snowflake/html_compiled
-/ete/snowflake/__pycache__
+/etc/snowflake/__pycache__
 credentials.json
 token.pickle
+snowflake_creds.yml
