Update agenda, split mat-inc, finalize materializations

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -23,9 +23,10 @@
         - slug: intro-to-jinja
         - slug: dbtonic-jinja
         - slug: packages
+        - slug: materializations
     - name: Afternoon
       lessons:
-        - slug: materializations-incremental
+        - slug: incremental
         - slug: data-warehouses
         - slug: group-case-study
         - slug: techniques-trade
