--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -9,7 +9,7 @@
     - name: Afternoon
       lessons:
         - slug: dbt-project-design
-        - slug: testing-ci
+        - slug: testing
         - slug: sources
         - slug: docs
         - slug: assignment
