Add more info about dbt Cloud

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -13,6 +13,7 @@
         - slug: sources
         - slug: docs
         - slug: assignment
+        - slug: deployment
 
 - day: 2
   title: "Day Two: Applications"
