Add ondemand directory and update navigation bar.

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,9 @@ collections:
   lessons:
     output: true
     permalink: /:collection/:path
+  ondemand:
+    output: true
+    permalink: /:collection/:path
 
 defaults:
 -
