Clean Up and Password Page

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ owner: http://github.com/fishtown-analytics
 repo: learn.getdbt.com
 branch: master
 robots: true
+onDemandHash: "43216f3592f37d744f7d544614a2f997a5739641"
 
 # --------------------------------------------------
 # Site imagery
