--- a/_data/ondemand/modules/project-design.yml
+++ b/_data/ondemand/modules/project-design.yml
@@ -9,8 +9,44 @@ presentationName: dbt Project Design
 presentationSlug: dbt-project-design
   
 pages: 
+  - name: What do you need to use dbt?
+    slug: dbt-reqs
+    assetName: false
+    assetLink: 
+    assetType:
+  
   - name: "Learning Objectives"
     slug: learning-objectives
     assetName: false
     assetLink:
+    assetType: 
+      
+  - name: Final Artifacts
+    slug: final-artifacts
+    assetName: false 
+    assetLink: 
+    assetType: 
+      
+  - name: Three Interfaces
+    slug: three-interfaces
+    assetName: false
+    assetLink: 
+    assetType: 
+      
+  - name: Structuring your dbt project
+    slug: structure-project
+    assetName: false
+    assetLink: 
+    assetType: 
+      
+  - name: dbt and BI tools
+    slug: dbt-bi
+    assetName: false
+    assetLink:
+    assetType:
+      
+  - name: Review
+    slug: review
+    assetName: false
+    assetLink: 
     assetType: 
