Turned off search indexing, fixed yml and README errors

--- a/_data/ondemand/modules/analyses-seeds.yml
+++ b/_data/ondemand/modules/analyses-seeds.yml
@@ -18,8 +18,14 @@ presentationSlug:
   
 pages: 
   
-  - name: What are analyses and seeds?
-    slug: analyses-seeds-what
+  - name: What are analyses?
+    slug: analyses-what
+    assetName: false
+    assetLink:
+    assetType:
+      
+  - name: What are seeds?
+    slug: seeds-what
     assetName: false
     assetLink:
     assetType:
