Update video links for analyses, seeds, docs, mats

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ _site/
 .jekyll-metadata
 Gemfile.lock
 .jekyll-cache/*
+etc/snowflake/__pycache__
+etc/snowflake/html_compiled
+etc/snowflake/credentials.json
+etc/snowflake/token.pickle
