updates what/why for tests and sources

--- a/_data/ondemand/modules/sources.yml
+++ b/_data/ondemand/modules/sources.yml
@@ -13,8 +13,8 @@ presentationSlug: sources
 pages: 
   - name: What are sources?
     slug: sources-what
-    assetName: false
-    assetLink: 
+    assetName: "What are sources in dbt?"
+    assetLink: https://www.youtube.com/embed/PVaI3PknIA8
     assetType: video
   
   - name: Learning Objectives
