--- a/_data/ondemand/modules/tests.yml
+++ b/_data/ondemand/modules/tests.yml
@@ -15,7 +15,7 @@ pages:
   - name: "Why is testing important?"
     slug: testing-why
     assetName: Why is Testing Important?
-    assetLink: https://fast.wistia.net/embed/iframe/ux1zymgy9b
+    assetLink: https://www.youtube.com/embed/ti_ygYyqVng
     assetType: video
   
   - name: "Learning Objectives"
