--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -29,5 +29,5 @@
       lessons:
         - slug: incremental
         - slug: data-warehouses
-        - slug: group-case-study
         - slug: techniques-trade
+        - slug: outro
