add videos and pages for Analytics Engineer and Set up cloud

--- a/_data/ondemand/modules/analyses-seeds.yml
+++ b/_data/ondemand/modules/analyses-seeds.yml
@@ -20,13 +20,13 @@ pages:
   
   - name: What are analyses?
     slug: analyses-what
-    assetName: false
+    assetName: true
     assetLink: https://www.youtube.com/embed/ADjRdFz1K8U
     assetType: video
       
   - name: What are seeds?
     slug: seeds-what
-    assetName: false
+    assetName: true
     assetLink: https://www.youtube.com/embed/KtM3K0x8WU0
     assetType: video
   
